; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/mm/extr_readahead.c_max_sane_readahead.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/mm/extr_readahead.c_max_sane_readahead.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@NR_INACTIVE_FILE = common dso_local global i32 0, align 4
@NR_FREE_PAGES = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @max_sane_readahead(i64 %0) #0 {
  %2 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %3 = load i64, i64* %2, align 8
  %4 = call i32 (...) @numa_node_id()
  %5 = load i32, i32* @NR_INACTIVE_FILE, align 4
  %6 = call i32 @node_page_state(i32 %4, i32 %5)
  %7 = call i32 (...) @numa_node_id()
  %8 = load i32, i32* @NR_FREE_PAGES, align 4
  %9 = call i32 @node_page_state(i32 %7, i32 %8)
  %10 = add nsw i32 %6, %9
  %11 = sdiv i32 %10, 2
  %12 = call i64 @min(i64 %3, i32 %11)
  ret i64 %12
}

declare dso_local i64 @min(i64, i32) #1

declare dso_local i32 @node_page_state(i32, i32) #1

declare dso_local i32 @numa_node_id(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
